The Qt basics are there and it should be able to display them all but I get a segmentation fault. If I render the volume in a VTK Render Window it displays fine so there is something about how I am doing it with Qt that is wrong. It must load fine. i.e. niftiVolume must be right, and so must the renderers. I've tried using SetRenderWindow with the VTK window and that also segfaults. That narrows it down to something to do with the widget -> this->axialWidget.... Hmmm.... this was working earlier, however.

--- a/COMBINED-Examples/nifti-vtk-master/RenderWindowUI.ui
+++ b/COMBINED-Examples/nifti-vtk-master/RenderWindowUI.ui
@@ -1,26 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>RenderWindowUI</class>
- <widget class="QMainWindow" name="SimpleView">
+ <widget class="QMainWindow" name="RenderWindowUI">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>541</width>
-    <height>583</height>
+    <width>1280</width>
+    <height>720</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>RenderWindowUI</string>
+   <string>Sam's Incredible Project</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QVTKWidget" name="qvtkWidget">
+   <widget class="QVTKWidget" name="axialWidget" native="true">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>511</width>
-      <height>541</height>
+      <x>0</x>
+      <y>0</y>
+      <width>640</width>
+      <height>360</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QVTKWidget" name="threeDWidget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>0</y>
+      <width>640</width>
+      <height>360</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QVTKWidget" name="sagittalWidget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>360</y>
+      <width>640</width>
+      <height>360</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QVTKWidget" name="coronalWidget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>360</y>
+      <width>640</width>
+      <height>360</height>
      </rect>
     </property>
    </widget>
@@ -61,8 +91,6 @@
    <header>QVTKWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources>
- 
- </resources>
+ <resources/>
  <connections/>
 </ui>
