--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>612</width>
-    <height>588</height>
+    <width>464</width>
+    <height>345</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -36,8 +36,28 @@
       </font>
      </property>
      <property name="text">
-      <string>Data</string>
+      <string>1. Select Scan &amp; Uncertainty</string>
      </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="horizontalWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="buttonPickScan">
+        <property name="text">
+         <string>Pick MRI</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonPickUncertainty">
+        <property name="text">
+         <string>Pick Uncertainty</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -55,7 +75,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="thingsLabel">
+    <widget class="QLabel" name="label">
      <property name="font">
       <font>
        <pointsize>18</pointsize>
@@ -64,7 +84,47 @@
       </font>
      </property>
      <property name="text">
-      <string>Things</string>
+      <string>2. Overlay in 2D</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="buttonOverlay">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="toolTip">
+      <string>Do image processing</string>
+     </property>
+     <property name="text">
+      <string>Overlay Uncertainty</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <pointsize>18</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>3. Options</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBoxCrosshairs">
+     <property name="text">
+      <string>Show Crosshairs</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <property name="tristate">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
@@ -75,16 +135,6 @@
      </property>
      <property name="text">
       <string>Select a Scan</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="buttonPerformImageProcessing">
-     <property name="toolTip">
-      <string>Do image processing</string>
-     </property>
-     <property name="text">
-      <string>Overlay Uncertainty</string>
      </property>
     </widget>
    </item>
