--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>464</width>
-    <height>367</height>
+    <height>412</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -174,6 +174,48 @@
     </widget>
    </item>
    <item>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="labelSliderLeft">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelSliderRight">
+        <property name="text">
+         <string>0</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+     </layout>
+     <zorder>thresholdSlider</zorder>
+     <zorder>labelSliderRight</zorder>
+     <zorder>labelSliderLeft</zorder>
+    </widget>
+   </item>
+   <item>
+    <widget class="QmitkFloatingPointSpanSlider" name="thresholdSlider">
+     <property name="toolTip">
+      <string>Change transfer function window range.</string>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::NoTicks</enum>
+     </property>
+     <property name="tickInterval">
+      <number>1</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="buttonThreshold">
      <property name="text">
       <string>Threshold Uncertainty</string>
@@ -226,6 +268,13 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QmitkFloatingPointSpanSlider</class>
+   <extends>QSlider</extends>
+   <header location="global">QmitkFloatingPointSpanSlider.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
