Added toggling for thresholding.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -257,9 +257,9 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="buttonThreshold">
+       <widget class="QRadioButton" name="radioButtonEnableThreshold">
         <property name="text">
-         <string>Threshold</string>
+         <string>Enabled</string>
         </property>
        </widget>
       </item>
