Sphere of uncertainty works.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -402,6 +402,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="buttonSphereUncertainty">
+        <property name="text">
+         <string>Sphere</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
