BRAIN button takes the surface and makes each point on it red. To view it you need to turn scalar visibility on in the properties.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -418,6 +418,13 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="buttonBrainSurfaceTest">
+           <property name="text">
+            <string>BRAIN!</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
