Added a function that generates a sphere surface - easier to understand than the lungs. Uncertainty maps well to it, unfortunately they're not registered. Need to find some way of doing that.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -452,6 +452,13 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="buttonSphereSurface">
+           <property name="text">
+            <string>Sphere</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
