--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>360</width>
+    <width>418</width>
     <height>690</height>
    </rect>
   </property>
@@ -509,6 +509,13 @@
           <widget class="QPushButton" name="buttonSphereUncertainty">
            <property name="text">
             <string>Sphere</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonQuadrantSphereUncertainty">
+           <property name="text">
+            <string>Quad Sphere</string>
            </property>
           </widget>
          </item>
