--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>418</width>
-    <height>690</height>
+    <height>744</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -223,7 +223,14 @@
          </font>
         </property>
         <property name="text">
-         <string>2D - Uncertainty Thresholding</string>
+         <string>2a. Thresholding (2D)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonErode">
+        <property name="text">
+         <string>Erode</string>
         </property>
        </widget>
       </item>
@@ -339,14 +346,62 @@
          </font>
         </property>
         <property name="text">
-         <string>3D - Uncertainty Sphere</string>
+         <string>2b. Sphere Texture (3D)</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="buttonSphere">
         <property name="text">
-         <string>Generate Sphere</string>
+         <string>Map to Texture</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label2c">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>2c. Surface Mapping (3D)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="widget_2" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QPushButton" name="buttonSphereSurface">
+           <property name="text">
+            <string>Sphere</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonCubeSurface">
+           <property name="text">
+            <string>Cube</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="buttonTODOSurface">
+           <property name="text">
+            <string>TODO</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonSurfaceMapping">
+        <property name="text">
+         <string>Map to Surface</string>
         </property>
        </widget>
       </item>
@@ -445,20 +500,6 @@
            </property>
           </widget>
          </item>
-         <item>
-          <widget class="QPushButton" name="buttonBrainSurfaceTest">
-           <property name="text">
-            <string>BRAIN!</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="buttonSphereSurface">
-           <property name="text">
-            <string>Sphere</string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
       </item>
@@ -484,7 +525,7 @@
          </font>
         </property>
         <property name="text">
-         <string>5. Test Uncertainties</string>
+         <string>5. Test Uncertainty Volumes</string>
         </property>
        </widget>
       </item>
