Thresholding enabled radio button changed to checkbox.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -291,7 +291,7 @@
               </spacer>
              </item>
              <item>
-              <widget class="QRadioButton" name="radioButtonEnableThreshold">
+              <widget class="QCheckBox" name="checkBoxEnableThreshold">
                <property name="maximumSize">
                 <size>
                  <width>80</width>
